finalize interface and UI logic to insert calculations

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -2,6 +2,11 @@ img {
   max-width: 100%;
 }
 
-#planet-info-container {
+#page-container {
+  margin-top: 5%;
+}
+
+.planet-info-row {
+  display: none;
   margin-top: 5%;
 }
